# airship-mlapi

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml
app/: .env.local  .gitignore  main.py  pyproject.toml  requirements.txt
app/src/: app_container.py  app_controller.py
app/src/lib/azure/storage/: blob_storage_client.py
app/src/lib/firebase/: auth.py  authorize_bearer_token.py
app/src/routers/voice_model/: language_entity.py  voice_model_container.py  voice_model_controller.py  voice_model_service.py
app/src/routers/voice_model/dto/: create_voice_model_dto.py  create_voice_sound_dto.py  voice_model_status_response_dto.py
app/src/utils/: auth.py  base_container.py  base_controller.py
app/src/utils/error/: core.py  env.py
app/vall_e_x/: app.py
app/vall_e_x/models/: vallex.py
app/vall_e_x/modules/: scaling.py
app/vall_e_x/utils/g2p/: __init__.py  cleaners.py
